# openva_pipeline

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile_ubuntu16  MANIFEST.in  Pipfile  README.md  __init__.py  appveyor.yml  dhis.py  install_software_ubuntu16_04.sh  install_software_ubuntu18_04.sh  install_software_ubuntu_20_04.sh  odk.py  openVA.py  pipeline.py  pyproject.toml  requirements.txt  runPipeline.py  setup.py  tox.ini  transferDB.py  ubuntu_installation.sh
.github/workflows/: codeql.yml
docs/: .readthedocs.yaml  conf.py  config.rst  help.rst  index.rst  install.rst  requirements.txt  setup.md  software.rst  vignette.rst
docs/Screenshots/: .contents
docs/_build/: .buildinfo  config.html  genindex.html  help.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  software.html
openva_pipeline/: __init__.py  __version__.py  dhis.py  exceptions.py  odk.py  openVA.py  openva.py  pipeline.py  runPipeline.py  run_pipeline.py  transferDB.py  transfer_db.py
openva_pipeline/data/: __init__.py  spanish.py
openva_pipeline/libs/: SmartVAlink
openva_pipeline/sql/: pipelineDB.sql
openva_pipeline/tests/: Pipeline.db  Pipeline_with_errors.db  context.py  copy_Pipeline.db  copy_pipelineDB.sql  copy_smartVA_Pipeline.db  pipelineDB.sql  pipelineDB_with_errors.sql  run_Pipeline.db  run_pipelineDB.sql  test_dhis.py  test_odk.py  test_openVA.py  test_pipeline.py  test_transferDB.py  wrongFields_Pipeline.db  wrongFields_pipelineDB.sql  wrongTables_Pipeline.db  wrongTables_pipelineDB.sql
sql/: pipelineDB.sql
tests/: Pipeline.db  context.py  copy_Pipeline.db  copy_pipelineDB.sql  copy_smartVA_Pipeline.db  copy_smartva_pipelineDB.sql  dbErrorLog.csv  pipelineDB.sql  run_pipelineDB.sql  setup_test_databases.sh  test_dhis.py  test_odk.py  test_openVA.py  test_openva.py  test_pipeline.py  test_transferDB.py  test_transfer_db.py  wrongFields_pipelineDB.sql  wrongTables_pipelineDB.sql
tests/ODKFiles/: odkExport_new_who_v151.csv  odk_export_org_unit_in_id10057.csv  odk_export_org_unit_in_id10057_tei.csv  odk_export_phmrc-1.csv  odk_export_phmrc-2.csv  odk_export_prev_who_v151.csv  previous_export.csv  zero_records_export.csv
tests/OpenVAFiles/: entity_attribute_value.csv  new_storage.csv  record_storage.csv  sample_new_storage_verified.csv  sample_openva_input.csv  (+3 more)
(+204 files in other folders)
